# rpi5_ME5126_robot

./: package.xml  setup.cfg  setup.py
config/: ekf.yaml  nav2_params.yaml
launch/: nav2_bringup_navigation_launch.py  nav2_bringup_with_odom_launch.py  nav2_bringup_with_rviz_launch.py  nav2_navigation_launch.py  rpi5_cant_move_sim_launch.py  rpi5_localization_launch.py  rpi5_odometry_rviz2_launch.py
rpi5_robot_localization/: rpi5_control_node.py  rpi5_encoder_node.py  rpi5_encoder_node.py.bak  rpi5_imu_node.py  rpi5_odometry_node.py  rpi5_serial_bridge_node.py
rviz2/: rpi5_cant_move.rviz  rpi5_nav2.rviz
scripts/: input_goal.py  map_generator.py
