<?xml version="1.0" encoding="UTF-8"?>
<package format="3">
  <name>rpi5_robot_localization</name>
  <version>0.0.0</version>
  <description>RPi5 localization + motor control</description>
  <maintainer email="gdteyuj123@gmail.com">lego_Dai</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>python3-libgpiod</exec_depend>
  <exec_depend>python3-smbus</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_regulated_pure_pursuit_controller</exec_depend>

  
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>


